distros/T/Test-UsedModules/t/resource/lib/Test/UsedModules/Fail/1.pm
package Test::UsedModules::Fail::1;
use strict;
use warnings;
use utf8;

use Cwd;

1;
